examples/test/testpolicy12116.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12116
  namespace: namespace167
spec:
  podSelector:
    matchLabels:
      key0: value21
      key25: value11
      key47: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value40
          key38: value44
          key25: value12
      podSelector:
        matchLabels:
          key38: value7
          key21: value36
